--- a/Churned_Bank_predict.ipynb
+++ b/Churned_Bank_predict.ipynb
@@ -5,7 +5,7 @@
    "id": "3207d873",
    "metadata": {},
    "source": [
-    "## Data ini berbicara banyak data user yang masih menggunakan dan tidak menggunakan suatu credit card "
+    "## Data ini berbicara banyak data user yang masih setia menggunakan atau tidak menggunakan suatu credit card tertentu. "
    ]
   },
   {
